Fix Gee-Involved-Title div width overflowing screen broder

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,9 +258,10 @@ a>.nav-style>a:hover {
 }
 
 .get-involved-title {
-    width: 100%;
+    width: auto;
     text-align: center;
-    margin: 20px;
+    margin-bottom: 1em;
+    background-color: red;
 }
 
 .get-involved-card-title {
